--- a/Attività.html
+++ b/Attività.html
@@ -69,7 +69,7 @@
   <div class="row">
     <div class="column">
         <br>
-       <div class="column-images"> <img src="Biblioteca.jpg" width="400" margins="auto" alt="Una fotografia di uno scaffale in una biblioteca"></div>
+       <div class="column-images"> <img src="Biblioteca.jpg" width="300" margins="auto" alt="Una fotografia di uno scaffale in una biblioteca"></div>
       </div>
     <div class="column">  <h2>Open Days</h2>
       <hr>
@@ -93,12 +93,12 @@
                 <hr>
                 <br>
                 <section class="column-text"> <p>Data la vocazione sociale della Blue Skies Big Band, il gruppo si esibisce in eventi di beneficenza, solitamente dietro offerta libera.</p>
-                  <p>In passato ha già collaborato con il reparto di pediatria dell'Ospedale S. Orsola di Bologna, l'ospedale psichiatrico Villa Baruzziana</p>
+                  <p>In passato ha già collaborato con il reparto di pediatria dell'Ospedale S. Orsola di Bologna, l'ospedale psichiatrico privato Villa Baruzziana e l'ospedale Rizzoli di Bologna. o</p>
                   <p>Il gruppo si esibisce pure in eventi pubblici in collaborazione con vari enti e teatri della realtà di Bologna e provincia.</p>
 </section>       
 </div>
             <div class="column">
-             <div class="column-images"><img src="batteria.jpg" width="400" margins="auto" alt="Una fotografia di una batteria che sta venendo suonata"> <div></div>
+             <div class="column-images"><img src="batteria.jpg" width="300" margins="auto" alt="Una fotografia di una batteria che sta venendo suonata"> <div></div>
               </div> 
         </div>     
         </section>    
