--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <br>
         <p>Fondato nel 2022, il gruppo Blue Skies vede l'incontro di adolescenti e giovani adulti con i residenti della casa di riposo <quote>Henghel Gualdi</quote>. Il nostro progetto mira a far dialogare delle generazioni diverse, accomunate dalla passione per la musica jazz e dal desiderio di conoscerla e praticarla.</p>
         <br>
-        <div class="button-column"><a href="attività.html"><button>Scopri le nostre attività</button></a></div></div>
+        <div class="button-column"><a href="Attività.html"><button>Scopri le nostre attività</button></a></div></div>
     <div class="column">
         <img src="pianola.png" width="300px" alt="un pianoforte elettrico sta venendo suonato da delle mani di un uomo adulto">
         <h3>Eventi</h3>
@@ -89,7 +89,7 @@
   <section>
       
 <div class="center">
-    <img src="Macchina Blue Skies.png" width="500px">
+    <img src="Macchina Blue Skies.png" width="400px">
 </div>
   
 <h1>Attività e Prezzi</h1>
