--- a/Documentazione.html
+++ b/Documentazione.html
@@ -105,8 +105,8 @@
    
  
    <h3>- Look and feel</h3>
-   <p>Ispirati allo stile artistico di molti album e poster di rassegne jazz, ho creato dei disegni che riprendessero le caratteristiche visive dello stile artistico Midcentury, diffuso tra gli anni '50 e '60 del '900. Lo stile usa palette di colori minima ed è basato sulle forme e i contrasti tra le forme dei personaggi e quelle dello sfondo.
-   Il colore blu riprende nome della band, a cui ho affiancato un rosso tenue che possa contrastarlo. La combinazione di colori richiama in maniera velata la città in cui svolge il corso, offrendo anche un approccio estetico che possa distinguere il sito.</p>
+   <p>Ispirati allo stile artistico di molti album e poster di rassegne jazz, ho creato dei disegni che riprendessero le caratteristiche visive dello stile artistico Midcentury, diffuso tra gli anni '50 e '60 del '900. Lo stile usa una palette di colori minima ed è basato sulle forme e i contrasti tra i personaggi e lo sfondo.
+   Il colore blu riprende il nome della band, a cui ho affiancato un rosso tenue che possa offrire un contrasto. La combinazione di colori richiama in maniera velata la città in cui svolge il corso, offrendo anche un approccio estetico che possa distinguere il sito.</p>
    <br>
    <p>Ho basato molta parte del linguaggio visivo del sito sull'accessibilità, in particolar modo nei confronti di potenziali utenti con autismo, ADHD, ansia, dislessia e difficoltà visive. Ho quindi optato per un'interfaccia minima, un linguaggio semplice e conciso, e dei colori morbidi.</p>
    <p>Per gli header ho usato le font Yesevaone-regular mentre per i paragrafi la font josefin-sans, una combinazione elegante e al contempo moderna, in sintonia con lo stile artistico del sito.</p>
