--- a/Chi Siamo.html
+++ b/Chi Siamo.html
@@ -24,7 +24,7 @@
         <div class="topnav" id="myTopnav">
           <a href="index.html" class="active">Home</a>
             <a href="Chi Siamo.html">Chi siamo</a>
-            <a href="#contact">Attività</a>
+            <a href="Attività.html">Attività</a>
             <a href="Repertorio.html">Repertorio</a>
             <div class="dropdown">
               <button class="dropbtn">Introduzione al jazz
