--- a/Documentazione.html
+++ b/Documentazione.html
@@ -186,7 +186,7 @@
   </div>
     <div class="column"> 
       <br>
-      <img src="Obiettivo Instagram.png" height="200px">
+      <img src="Obiettivo Instagram.jpg" height="200px">
      </div>
 
   </div>
